fix search box alignment

--- a/ckanext/odsh/public/odsh.css
+++ b/ckanext/odsh/public/odsh.css
@@ -1015,7 +1015,7 @@ body {
 
 .search-box-container{
     width:100%;
-    max-width: 465px;
+    max-width: 430px;
     margin-bottom: 60px;
     margin-left: 250px;
 }
@@ -1024,6 +1024,7 @@ body {
     font-size: 87%;
     font-weight: 300;
     padding: 0px;
+    padding-right: 35px;
     padding-left: 5px;
     width: 100%;
     line-height: 1.1;
@@ -1040,7 +1041,7 @@ body {
     width: 25px;
     background: url(/base/images/Icon-Suche.png);
     background-size: 25px 25px;
-    right: 5px;
+    right: -28px;
     top: -25px;
     position: relative;
     float: right;
